--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>My web page</title>
   </head>
   <body>
-
+    <input type="text" id="message-input"/>
+    <button id="show-message-button">Click me!</button>
     <script src="./bundle.js"></script>
   </body>
 </html>
